# axum-surreal-api

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yaml
client/: bun.lockb  package.json
client/src/: App.svelte
client/src/components/: Books.svelte  Login.svelte
client/src/types/: index.ts
src/: config.rs  handlers.rs  main.rs  models.rs  templates.rs  types.rs
src/handlers/: books.rs  mod.rs  users.rs  views.rs
templates/: base.html  index.html  login-user.html  register-user.html
